* What's new in version 3.0

- The new "interactive" mode, specified by "stap -i" drops you into a
  command-line prompt where you can build up a script, run it, edit
  it, run it again, etc. Type "help" for a list of commands.

- Add macros @prints to print a scalar aggregate variable, @prints[1-9]
  to print an array aggregate (of given index-arity), formatted similarly
  to the automatic printing of written-only global variables.

  global a, b
  probe oneshot { a <<< 1; b[tid()] <<< 2 }
  probe end { @prints(a); @prints1(b) }

- Functions may now be overloaded during module runtime using the "next"
  statement in script functions and STAP_NEXT macro for embedded-C functions.
  They may also be overloaded by number of parameters during compile time.
  For example,

  Runtime overloading:
    function f() { if (condition) next; print("first function") }
    function f() %{ STAP_NEXT; print("second function") %}
    function f() { print("third function") }

  For the given functions above, a functioncall f(), will execute the body of the
  third function if condition evaluates to true and print "third function".
  Note that the second function is unconditionally nexted.

  Parameter overloading:
    function g() { print("first function") }
    function g(x) { print("second function") }
    g() -> "first function"
    g(1) -> "second function"

  Note that runtime overloading does not occur in the above example as the number
  of parameters of the functions differ. The use of a next statement inside a function
  while no more overloads remain will trigger a runtime exception. The function
  candidates are selected at compile time and is determined by the number of arguments
  provided for the functioncall.

- Add Czech version of manual pages.

- The stap compile server will log the stap client's options that are passed
  to the server. The options that get logged on the server will include the